resolvendo comentários do sonar